<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">



    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/web"
        android:title="@string/next"
        android:orderInCategory="300"
        android:icon="@mipmap/ic_access_web"
        app:showAsAction="always"/>
    <item
        android:id="@+id/profile"
        android:title="@string/next"
        android:orderInCategory="200"
        android:icon="@mipmap/ic_profile"
        app:showAsAction="always"/>

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

</menu>