<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.esiea.mehrenberger_lestrille.myapp.HelpActivity">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/app_bar" />


    <TextView
        android:id="@+id/helpSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/helpSubscribe"
        android:textSize="13dp"
        android:layout_below="@+id/helpTop"
        android:layout_alignLeft="@+id/helpTop"
        android:layout_alignStart="@+id/helpTop" />

    <TextView
        android:id="@+id/helpProp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/HelpShare"
        android:textSize="13dp"
        android:layout_below="@+id/helpSubscribe"
        android:layout_alignLeft="@+id/helpSubscribe"
        android:layout_alignStart="@+id/helpSubscribe" />

    <TextView
        android:id="@+id/helpTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpGeoloc"
        android:textSize="13dp"
        android:layout_below="@+id/helpBest"
        android:layout_alignLeft="@+id/helpBest"
        android:layout_alignStart="@+id/helpBest" />

    <TextView
        android:id="@+id/helpBeerMug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/helpClickMug"
        android:textSize="13dp"
        android:layout_below="@+id/helpLongClick"
        android:layout_alignLeft="@+id/helpLongClick"
        android:layout_alignStart="@+id/helpLongClick" />

    <TextView
        android:id="@+id/helpLongClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/helpLongClick"
        android:textSize="13dp"
        android:layout_below="@+id/helpClick"
        android:layout_alignLeft="@+id/helpClick"
        android:layout_alignStart="@+id/helpClick" />

    <Button
        android:layout_width="match_parent"
        android:text="Creators of this application"
        android:id="@+id/button"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal|center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp" />

    <TextView
        android:id="@+id/helpRecy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="RecyclerView :"
        android:textSize="19dp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/helpProp"
        android:layout_alignLeft="@+id/helpClick"
        android:layout_alignStart="@+id/helpClick"
        android:layout_marginTop="18dp" />

    <TextView
        android:text="Notification example :"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpNotif"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <Button
        android:text="@string/buttonDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDate"
        android:onClick="setDate"
        android:gravity="center"
        android:layout_above="@+id/helpNotif"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp" />

    <TextView
        android:text="Set date with DatePickerDialog :"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_above="@+id/buttonDate"
        android:layout_alignLeft="@+id/helpBeerMug"
        android:layout_alignStart="@+id/helpBeerMug" />

    <TextView
        android:id="@+id/helpBest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/helpBest"
        android:textSize="13dp"
        android:layout_below="@+id/helpNav"
        android:layout_alignLeft="@+id/helpRecy"
        android:layout_alignStart="@+id/helpRecy" />

    <TextView
        android:id="@+id/helpClick"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/helpClick"
        android:textSize="13dp"
        android:layout_below="@+id/helpRecy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp" />

    <TextView
        android:text="@string/helpProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/helpBeerMug"
        android:layout_alignRight="@+id/helpSubscribe"
        android:layout_alignEnd="@+id/helpSubscribe" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:text="@string/helpCamera"
        android:layout_below="@+id/textView13"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_access_web"
        android:id="@+id/imageView3"
        android:layout_below="@+id/textView14"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:layout_marginTop="20dp" />

    <TextView
        android:text="@string/helpWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_marginTop="14dp" />

    <TextView
        android:id="@+id/helpNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="NavigationDrawer :"
        android:textSize="19dp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignLeft="@+id/helpTop"
        android:layout_alignStart="@+id/helpTop"
        android:layout_marginTop="19dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_profile"
        android:id="@+id/imageView2"
        android:layout_above="@+id/imageView3"
        android:layout_alignLeft="@+id/helpBeerMug"
        android:layout_alignStart="@+id/helpBeerMug" />

</RelativeLayout>